--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -4,6 +4,15 @@
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
 
+// **********************
+// EARLY DEVELOPMENT CODE
+<p>User Index</p>
+<div th:each="user : ${users}">
+
+</div>
+
+
+// **********************
 
 
 
