--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/head :: head('Create a Post')"></head>
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
-
+<h1>Post Create</h1>
 
 
 
