--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/head :: head('View a Post')"></head>
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
-
+<h1>Show Post</h1>
 
 
 
