--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/head :: head('Edit a Post')"></head>
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
-
+<h1>Post Update</h1>
 
 
 
