--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/head :: head('Sign in')"></head>
-<body class="text-center">
-<main class="form-signin">
-    <form>
-        <!--        LOGO GOES HERE-->
+<head>
+    <meta charset="UTF-8" />
+    <title>Log In</title>
+</head>
+<body>
+<h1>Log In</h1>
+<div th:if="${param.error}">
+    Invalid Username and Password.
+</div>
+<div th:if="${param.logout}">
+    You have been logged out.
+</div>
 
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-        <label for="username" class="visually-hidden">Username</label>
-        <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
-        <label for="password" class="visually-hidden">Password</label>
-        <input type="text" id="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me">
-                Remember me
-            </label>
-        </div>
-        <input class="w-100 btn btn-lg btn-primary" type="submit" value="Log in">
-    </form>
-    <div th:if="${param.error}">
-        Invalid Username and Password.
-    </div>
-    <div th:if="${param.logout}">
-        You have been logged out.
-    </div>
-</main>
+<form th:action="@{/login}" method="post">
+    <label for="username">Username</label>
+    <input id="username" name="username" type="text" />
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <input type="submit" value="Log In" />
+</form>
 </body>
 </html>
