--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Navbar</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<nav th:fragment="nav">
-
-
-
-
+<nav th:fragment="nav" class="main-nav">
+    <div class="container-fluid px-0">
+        <div class="logo">
+            <a href="/">LISTOLOGY</a>
+        </div>
+        <div id="mainListDiv" class="main_list">
+            <ul class="navlinks">
+                <li><a th:href="@{/post/all}">posts</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/dashboard}">dashboard</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/post/new}">create</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:action="@{/logout}" th:method="POST">
+                        <a href="#">
+                            <button style="background-color:transparent;border:none;color: inherit">logout</button>
+                        </a>
+                    </form>
+                </li>
+                <li sec:authorize="isAnonymous()"><a th:href="@{/about-us}">about us</a></li>
+                <li sec:authorize="isAnonymous()"><a th:href="@{/register}">register</a></li>
+                <li sec:authorize="isAnonymous()"><a th:href="@{/login}">login</a></li>
+            </ul>
+        </div>
+        <span class="navTrigger">
+            <i></i>
+            <i></i>
+            <i></i>
+        </span>
+    </div>
 </nav>
 </body>
 </html>
