--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -1,15 +1,75 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/head :: head('Edit a Post')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <title>Dashboard</title>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--  MAIN CSS -->
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <!--  CUSTOM PROFILE CSS -->
+    <link rel="stylesheet" th:href="@{/css/recipe.css}">
+</head>
 <body>
-<nav th:replace="partials/navbar :: nav"></nav>
-<h1>Post Update</h1>
+<header>
+    <nav th:replace="partials/navbar.html :: nav"></nav>
+</header>
+<main class="h-100 pt-md-5">
+    <div class="container justify-content-center align-items-center modal-dialog-centered">
+        <div class="tab-content bg-light tab-card rounded-card shadow-lg my-4 p-3" id="myTabContent">
+            <!--    ADD RECIPE INFO TAB-->
+            <div class="tab-pane fade show active" id="addInfo" role="tabpanel" aria-labelledby="add-info-tab">
 
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <h3 class="my-3 text-center chow-font">Do you need to make changes?</h3>
+                        <form th:action="@{/post/{id}/delete(id=${post.id})}" th:method="post"
+                              th:object="${post}">
+                            <button style="border: none;background-color: transparent" class="red-text"><i
+                                    class="fas fa-backspace fa-2x"></i></button>
+                            <p class="text-muted">Delete</p>
+                        </form>
 
+                    </div>
+                    <p id="recipe-id" th:text="${post.id}" hidden></p>
 
+                    <form th:action="@{/post/{id}/edit(id=${post.id})}" th:method="post" th:object="${post}">
+                        <!--    ENTER A RECIPE TITLE   -->
+                        <div class="form-group mb-3 px-4">
+                            <label id="title">Title</label>
+                            <input type="text" class="form-control" aria-label="Title"
+                                   aria-describedby="title" th:field="*{title}" required
+                                   placeholder="Title"/>
+                            <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
+                        </div>
 
+                        <!--    ENTER RECIPE DESCRIPTION -->
+                        <div class="form-group px-4">
+                            <label>Body</label>
+                            <textarea class="form-control" placeholder="your savory description .."
+                                      aria-label="description" rows="3" th:field="*{body}"
+                                      minlength="10"></textarea>
+                            <p th:if="${#fields.hasErrors('body')}" th:errors="*{body}"></p>
+                        </div>
+                        <div class="form-group d-flex justify-content-center align-items-center">
+                            <button sec:authorize="isAuthenticated()"
+                                    class="btn btn-yellow text-center rounded-pill nav-link shadow-sm px-2"
+                                    type="submit">
+                                Update
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
-
-<div th:replace="partials/scripts :: scripts"></div>
+<th:block th:include="partials/scripts :: scripts"></th:block>
 </body>
 </html>
