--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,26 +1,161 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/head :: head('View a Profile')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <title>Dashboard</title>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <!--  CUSTOM PROFILE CSS -->
+    <link rel="stylesheet" th:href="@{/css/profile.css}">
+
+</head>
 <body>
-<nav th:replace="partials/navbar :: nav"></nav>
+<header>
+    <nav th:replace="partials/navbar.html :: nav"></nav>
+</header>
+<main class="mb-5">
+    <!--Main Container-->
+    <!-- USER INFO -->
+    <div class="container mt-4 pt-5">
+        <div class="row px-2 pt-md-5">
+            <!-- IF HAS PROFILE PICTURE -->
+            <div class="col-8 col-sm-9 mb-4">
+                <div class="mb-2">
+                    <h2 id="profileName" class="mb-0 text-black" th:text="${user.username}"></h2>
+                </div>
+                <!-- IF CUSTOMER IS HAS ABOUT ME ELSE -->
+                <p class="text-white">
+                    <em>
+                        <small th:text="${user.getAboutMe()} ?: 'Introduce yourself to the community by writing a little about yourself.'"></small>
+                    </em>
+                </p>
 
-<p th:text="'Username: ' + ${user.username}"></p>
-<p th:text="'About Me: ' + ${user.aboutMe}"></p>
-<p th:text="'Email: ' + ${user.email}"></p>
-<p th:text="'Member since: ' + ${user.createdAt}"></p>
-<div th:each="post : ${user.posts}">
-    <p th:text="${post.title}"></p>
-</div>
-<div th:each="follower : ${user.followers}">
-    <p th:text="${follower.getFriend().username}"></p>
-</div>
-<div th:each="following : ${user.followings}">
-    <p th:text="${following.getFriend().username}"></p>
-</div>
+                <div>
+                    <!-- EDIT PROFILE LINK -->
+                    <a th:href="@{/user/{id}/edit(id=${user.id})}" sec:authorize="isAuthenticated()" th:if="${isOwner}"
+                       type="button" class="btn yellow-text edit-btn rounded-pill shadow font-weight-bold">Edit
+                        Profile</a>
+
+                    <!-- FOLLOW USER BUTTON -->
+                    <div th:if="${not isAuthor}">
+                        <button id="addFriend" type="submit" class="btn btn-red rounded-pill"
+                                th:text="${isFollowing ? 'Unfollow' : 'Follow'}"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END USER INFO -->
+
+        <!--      DASHBOARD TABS-->
+        <div class="container">
+            <ul class="nav nav-tabs row align-items-center justify-content-center">
+                <!--        recipes-->
+                <li class="nav-item col-4 col-md-2 px-0" id="userRecipes" title="Recipes">
+                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#recipesTab" data-toggle="tab">
+                        <i class="fas fa-utensils fa-2x"></i>
+                        <p class="text-white mb-0 small">recipes</p>
+                    </a>
+                </li>
+                <!--        favorites-->
+                <li class="nav-item col-4 col-md-2 px-0" id="userFavorites">
+                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#favoritesTab" data-toggle="tab">
+                        <i class="fas fa-bookmark fa-2x"></i>
+                        <p class="text-white mb-0 small">favorites</p>
+                    </a>
+                </li>
+                <!--        followers-->
+                <li class="nav-item col-4 col-md-2 px-0" id="userFollowers">
+                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#followersTab" data-toggle="tab">
+                        <i class="fas fa-users fa-2x"></i>
+                        <p class="text-white mb-0 small">followers</p>
+                    </a>
+                </li>
+                <!--        following-->
+                <li class="nav-item col-4 col-md-2 px-0" id="userFollowing">
+                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#followingTab" data-toggle="tab">
+                        <i class="fas fa-user-plus fa-2x"></i>
+                        <p class="text-white mb-0 small">following</p>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+        <!--      !DASHBOARD TABS-->
+    </div>
+    <div class="d-flex justify-content-center align-items-center ">
+        <div class="container bg-light tab-card rounded-card shadow-lg mb-5">
+            <div class="tab-content  ">
+                <!--      POSTS TAB-->
+
+                <!--      FAVORITES TAB-->
+                <div class="tab-pane" id="favoritesTab">
+                    <div class="row justify-content-center py-5">
+                        <div th:each="favorite : ${user.favorites}" class="align-items-center justify-content-around">
+                            <div class="h-100 px-2 my-2 border-none bg-transparent recipe-card" style="width: 18rem;">
+                                <div class="card-body bg-transparent">
+                                    <h5 th:text="${favorite.post.title}"
+                                        class="card-title truncate font-weight-bold"></h5>
+                                    <div class="row align-items-baseline">
+                                        <div class="col-6">
+                                            <p th:text="${favorite.post.author.username}"></p>
+                                        </div>
+                                        <div class="col-3">
+                                            <div class="rounded-pill border text-center" style="width: 75px">
+                                                <i class="far fa-heart"></i> <span
+                                                    th:text="${favorite.post.favoritedBy.size()}"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--      FOLLOWERS TAB-->
+                <div class="tab-pane" id="followersTab">
+                    <div class="row align-items-center justify-content-around p-3">
+                        <div th:each="follower : ${user.followers}" class="my-2 mx-2 text-center">
+                            <p th:text="${follower.user.username}"></p>
+                        </div>
+                    </div>
+                </div>
+                <!--      FOLLOWING TAB-->
+                <div class="tab-pane" id="followingTab">
+                    <div class="row align-items-center justify-content-around p-3">
+                        <div class="col-md-12">
+                        </div>
+                        <div th:each="following : ${user.followings}" class="my-2  mx-2 text-center">
+                            <p th:text="${following.friend.username}"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 
+<!--! MODALS-->
 
-
+<!--MODALS-->
+<div th:replace="partials/modals"></div>
+<!--JS SCRIPTS-->
 <div th:replace="partials/scripts :: scripts"></div>
+<!--Get userId from Thyme to use in JS-->
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    const userId = /*[[${user.id}]]*/ '';
+    /*]]>*/
+</script>
+<script th:src="@{/js/profile.js}"></script>
+<script>
+
+</script>
 </body>
 </html>
