--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Sign up</title>
-</head>
-<body>
-<h1>Create an account</h1>
-<form th:action="@{/register}" method="POST" th:object="${user}">
-    <label for="username">Username</label>
-    <input id="username" th:field="*{username}" />
-
-    <label for="email">Email</label>
-    <input id="email" th:field="*{email}" />
-
-    <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}" />
-
-    <input value="Sign me up!" type="submit" />
-</form>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="partials/head :: head(title)"></head>
+<body id="registerBody">
+<header>
+    <nav th:replace="partials/navbar.html :: nav"></nav>
+</header>
+<main>
+    <div class="container pt-md-5">
+        <div class="row my-4 pt-md-5">
+            <div class="col-md-3  mt-5 white-text text-center text-md-left">
+            </div>
+            <div class="col-md-6 ">
+                <div class="card rounded-card bg-light">
+                    <form th:replace="user/forms :: register"></form>
+                    <div class="text-center mb-3">
+                        <a href="/login" class="text-decoration-none text-black-50">Already a member? Log in</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 mt-5 white-text text-center text-md-left">
+        </div>
+    </div>
+</main>
+<!--MODALS-->
+<!--<div th:replace="partials/modals"></div>-->
+<div th:replace="partials/scripts :: scripts"></div>
 </body>
 </html>
