--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="partials/head :: head(title)"></head>
+<head th:replace="partials/head :: head(Sign-up)"></head>
 <body id="registerBody">
 <header>
     <nav th:replace="partials/navbar.html :: nav"></nav>
