--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,56 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link th:href="@{/img/favicon.png}" rel="shortcut icon" type="image/x-icon">
+<head th:replace="partials/head :: head(Welocome)"></head>
 
-    <title>ChowNow</title>
-    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!--  MAIN CSS -->
-    <link rel="stylesheet" th:href="@{/css/main.css}">
-    <!--  LANDING CSS -->
-    <link rel="stylesheet" th:href="@{/css/landing.css}">
-</head>
-
-<body class="bg-green">
+<body>
 <header>
     <nav th:replace="partials/navbar.html :: nav"></nav>
 </header>
-<div class="jumbotron m-0" style="background-image: url('img/cn-bg.png');">
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-12 text-center mb-5">
-                <img src="img/cn-text.png" id="chowText" >
-            </div>
-            <div class="col-12 text-center">
-                <div id="headerSlide" class="carousel carousel-fade" data-ride="carousel" data-interval="3000" data-pause="false">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <span class="text-white">get your next dinner idea</span>
-                        </div>
-                        <div class="carousel-item">
-                            <span class="text-white">cook bake create </span>
-                        </div>
-                        <div class="carousel-item">
-                            <span class="text-white">recipes tailored for you</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 text-center mt-2">
-                <div class="btn btn-pink btn-lg rounded-pill scroll-btn text-white"><span class="font-weight-bold"><i class="fas fa-chevron-down"></i></span></div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<section id="showRegistration" class="toggle-reg"></section>
+<!--<section id="showRegistration" class="toggle-reg"></section>-->
 <!--MODALS-->
 <div th:replace="partials/modals"></div>
 <div th:replace="partials/scripts :: scripts"></div>
-<script th:src="@{/js/landing.js}"></script>
 </body>
 </html>
