--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<nav th:fragment="nav" class="main-nav">
-    <div class="container-fluid px-0">
-        <div class="logo">
-            <a href="/">LISTOLOGY</a>
-        </div>
-        <div id="mainListDiv" class="main_list">
-            <ul class="navlinks">
-                <li><a th:href="@{/post/all}">posts</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/dashboard}">dashboard</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/post/new}">create</a></li>
-                <li sec:authorize="isAuthenticated()">
+<nav th:fragment="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/}">LISTOLOGY</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/post/all}">lists</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/dashboard}">dashboard</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/post/new}">create</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" th:method="POST">
                         <a href="#">
                             <button style="background-color:transparent;border:none;color: inherit">logout</button>
                         </a>
                     </form>
                 </li>
-                <li sec:authorize="isAnonymous()"><a th:href="@{/about-us}">about us</a></li>
-                <li sec:authorize="isAnonymous()"><a th:href="@{/register}">register</a></li>
-                <li sec:authorize="isAnonymous()"><a th:href="@{/login}">login</a></li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/about-us}">about</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/register}">sign-up</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/login}">login</a>
+                </li>
+
             </ul>
         </div>
-        <span class="navTrigger">
-            <i></i>
-            <i></i>
-            <i></i>
-        </span>
     </div>
 </nav>
+
 </body>
 </html>
