--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -1,18 +1,82 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/head :: head('View Post Index')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="partials/head :: head('Lists')"></head>
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
-<h1>Post Index</h1>
-<div th:each="post : ${posts}">
-    <p th:text="${post.title}"></p>
-    <p th:text="${post.body}"></p>
-    <p th:text="${post.createdAt}"></p>
-    <p th:text="${post.author.username}"></p>
+<div class="d-flex align-items-start">
+    <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <a class="nav-link active" id="v-pills-music-tab" data-bs-toggle="pill" href="#v-pills-music" role="tab"
+           aria-controls="v-pills-music" aria-selected="true">music</a>
+        <a class="nav-link" id="v-pills-movies-tab" data-bs-toggle="pill" href="#v-pills-movies" role="tab"
+           aria-controls="v-pills-movies" aria-selected="false">movies</a>
+        <a class="nav-link" id="v-pills-books-tab" data-bs-toggle="pill" href="#v-pills-books" role="tab"
+           aria-controls="v-pills-books" aria-selected="false">books</a>
+    </div>
+    <div class="tab-content" id="v-pills-tabContent">
+        <div class="tab-pane fade show active" id="v-pills-music" role="tabpanel"
+             aria-labelledby="v-pills-music-tab">
+            <!--            MUSIC LISTS GO HERE-->
+            <h5>Music Lists</h5>
+            <div th:each="post : ${posts}">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${post.title}"></h5>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="${post.author.username}"></h6>
+                        <p class="card-text" th:text="${post.body}"></p>
+                        <a href="#postModal" data-bs-toggle="modal" class="card-link">View more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="v-pills-movies" role="tabpanel" aria-labelledby="v-pills-movies-tab">
+            <!--            MOVIE LISTS GO HERE-->
+            <h5>Movie Lists</h5>
+            <div th:each="post : ${posts}">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${post.title}"></h5>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="${post.author.username}"></h6>
+                        <p class="card-text" th:text="${post.body}"></p>
+                        <a href="#postModal" data-bs-toggle="modal" class="card-link">View more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="v-pills-books" role="tabpanel" aria-labelledby="v-pills-books-tab">
+            <!--            BOOK LISTS GO HERE-->
+            <h5>Book Lists</h5>
+            <div th:each="post : ${posts}">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${post.title}"></h5>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="${post.author.username}"></h6>
+                        <p class="card-text" th:text="${post.body}"></p>
+                        <a href="#postModal" data-bs-toggle="modal" class="card-link">View more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-
-
+<!--POST MODAL-->
+<div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <div th:replace="partials/scripts :: scripts"></div>
