--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -6,15 +6,16 @@
     <nav th:replace="partials/navbar.html :: nav"></nav>
 </header>
 <main>
-    <div class="container">
-        <div class="row mt-5 pt-md-5">
-            <div class="col-md-3 my-2 white-text text-center ">
-                <a class="btn btn-block btn-yellow btn-outline-default shadow" th:href="@{/user/{id}(id=${user.id})}">View Profile</a>
+    <div class="container pt-md-5">
+        <div class="row my-4 pt-md-5">
+            <div class="col-md-3  mt-5 white-text text-center text-md-left">
             </div>
-            <div class="col-md-9 mb-4">
+            <div class="col-md-6 ">
                 <!--    EDIT USER FORM -->
                 <div class="card bg-light rounded-card shadow-lg my-4">
                     <form th:replace="user/forms :: edit"></form>
+                    <a class="btn btn-block btn-yellow btn-outline-default shadow"
+                       th:href="@{/user/{id}(id=${user.id})}">Cancel</a>
                 </div>
                 <div th:if="${canChange}" class="card bg-light rounded-card shadow-lg my-4">
                     <form th:replace="user/forms :: resetPassword"></form>
