--- a/src/main/resources/templates/user/forms.html
+++ b/src/main/resources/templates/user/forms.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<head th:replace="partials/head :: head(Login)"></head>
 <body>
 <form th:fragment="register" th:action="@{/register}" th:method="post" class="text-center px-3 py-4 green-text" th:object="${user}" required>
 
@@ -38,7 +35,7 @@
         <em>At least 8 characters, 1 digit, and 1 special character</em>
     </small>
     <!-- Sign up button -->
-    <button class="btn btn-green rounded-pill" type="submit">Register</button>
+    <button class="btn" type="submit">Register</button>
 </form>
 
 <form th:fragment="login" th:action="@{/login}" th:method="POST" class="text-center px-3 py-4 green-text">
@@ -59,7 +56,7 @@
         </div>
     </div>
     <!-- Login button -->
-    <button class="btn btn-green rounded-pill" type="submit" value="Log In">Login</button>
+    <button class="btn" type="submit" value="Log In">Login</button>
 </form>
 
 <form th:fragment="edit" th:action="@{/user/{id}/edit(id=${user.id})}" th:method="post" class=" p-4" th:object="${user}">
