--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,147 +1,168 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <title>Dashboard</title>
-    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/main.css}">
-    <!--  CUSTOM PROFILE CSS -->
-    <link rel="stylesheet" th:href="@{/css/profile.css}">
-
-</head>
+<head th:replace="partials/head :: head('Dashboard')"></head>
 <body>
 <header>
     <nav th:replace="partials/navbar.html :: nav"></nav>
 </header>
-<main class="mb-5">
-    <!--Main Container-->
-    <!-- USER INFO -->
-    <div class="container mt-4 pt-5">
-        <div class="row px-2 pt-md-5">
-            <!-- IF HAS PROFILE PICTURE -->
-            <div class="col-8 col-sm-9 mb-4">
-                <div class="mb-2">
-                    <h2 id="profileName" class="mb-0 text-black" th:text="${user.username}"></h2>
-                </div>
-                <!-- IF CUSTOMER IS HAS ABOUT ME ELSE -->
-                <p class="text-white">
-                    <em>
-                        <small th:text="${user.getAboutMe()} ?: 'Introduce yourself to the community by writing a little about yourself.'"></small>
-                    </em>
-                </p>
+<!--NEW DASHBOARD-->
+<div class="d-flex align-items-start">
+    <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <a class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" href="#v-pills-profile" role="tab"
+           aria-controls="v-pills-profile" aria-selected="true">profile</a>
+        <a class="nav-link" id="v-pills-mylists-tab" data-bs-toggle="pill" href="#v-pills-mylists" role="tab"
+           aria-controls="v-pills-mylists" aria-selected="false">my lists</a>
+        <a class="nav-link" id="v-pills-favorites-tab" data-bs-toggle="pill" href="#v-pills-favorites" role="tab"
+           aria-controls="v-pills-favorites" aria-selected="false">favorites</a>
+    </div>
+    <div class="tab-content" id="v-pills-tabContent">
+        <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel"
+             aria-labelledby="v-pills-profile-tab">
+            <!--            MUSIC LISTS GO HERE-->
+            <h5>Profile</h5>
+            <div class="row px-2 pt-md-5">
+                <div class="col-8 col-sm-9 mb-4">
+                    <div class="mb-2">
+                        <h2 id="profileName" class="mb-0 text-black" th:text="${user.username}"></h2>
+                    </div>
+                    <!-- IF CUSTOMER IS HAS ABOUT ME ELSE -->
+                    <p class="text-white">
+                        <em>
+                            <small th:text="${user.getAboutMe()} ?: 'Introduce yourself to the community by writing a little about yourself.'"></small>
+                        </em>
+                    </p>
 
-                <div>
-                    <!-- EDIT PROFILE LINK -->
-                    <a th:href="@{/user/{id}/edit(id=${user.id})}" sec:authorize="isAuthenticated()" th:if="${isOwner}"
-                       type="button" class="btn yellow-text edit-btn rounded-pill shadow font-weight-bold">Edit
-                        Profile</a>
-
-                    <!-- FOLLOW USER BUTTON -->
-                    <div th:if="${not isAuthor}">
-                        <button id="addFriend" type="submit" class="btn btn-red rounded-pill"
-                                th:text="${isFollowing ? 'Unfollow' : 'Follow'}"></button>
+                    <div>
+                        <!-- EDIT PROFILE LINK -->
+                        <a th:href="@{/user/{id}/edit(id=${user.id})}" sec:authorize="isAuthenticated()" th:if="${isAuthor}"
+                           type="button" class="btn yellow-text edit-btn rounded-pill shadow font-weight-bold">Edit
+                            Profile</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- END USER INFO -->
-
-        <!--      DASHBOARD TABS-->
-        <div class="container">
-            <ul class="nav nav-tabs row align-items-center justify-content-center">
-                <!--        recipes-->
-                <li class="nav-item col-4 col-md-2 px-0" id="userRecipes" title="Recipes">
-                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#recipesTab" data-toggle="tab">
-                        <i class="fas fa-utensils fa-2x"></i>
-                        <p class="text-white mb-0 small">recipes</p>
-                    </a>
-                </li>
-                <!--        favorites-->
-                <li class="nav-item col-4 col-md-2 px-0" id="userFavorites">
-                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#favoritesTab" data-toggle="tab">
-                        <i class="fas fa-bookmark fa-2x"></i>
-                        <p class="text-white mb-0 small">favorites</p>
-                    </a>
-                </li>
-                <!--        followers-->
-                <li class="nav-item col-4 col-md-2 px-0" id="userFollowers">
-                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#followersTab" data-toggle="tab">
-                        <i class="fas fa-users fa-2x"></i>
-                        <p class="text-white mb-0 small">followers</p>
-                    </a>
-                </li>
-                <!--        following-->
-                <li class="nav-item col-4 col-md-2 px-0" id="userFollowing">
-                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#followingTab" data-toggle="tab">
-                        <i class="fas fa-user-plus fa-2x"></i>
-                        <p class="text-white mb-0 small">following</p>
-                    </a>
-                </li>
-            </ul>
-
+        <div class="tab-pane fade" id="v-pills-mylists" role="tabpanel" aria-labelledby="v-pills-mylists-tab">
+            <!--            USER LISTS GO HERE-->
+            <h5 th:text="${user.username} + ' lists'">My Lists</h5>
+            <div th:each="post : ${user.posts}">
+                <td th:text="${post.title}"></td>
+                <td th:text="${post.author.username}"></td>
+                <td th:text="${post.createdAt}"></td>
+                <td th:text="${post.updatedAt}"></td>
+            </div>
         </div>
-        <!--      !DASHBOARD TABS-->
-    </div>
-    <div class="d-flex justify-content-center align-items-center ">
-        <div class="container bg-light tab-card rounded-card shadow-lg mb-5">
-            <div class="tab-content  ">
-                <!--      POSTS TAB-->
-
-                <!--      FAVORITES TAB-->
-                <div class="tab-pane" id="favoritesTab">
-                    <div class="row justify-content-center py-5">
-                        <div th:each="favorite : ${user.favorites}" class="align-items-center justify-content-around">
-                            <div class="h-100 px-2 my-2 border-none bg-transparent recipe-card" style="width: 18rem;">
-                                <div class="card-body bg-transparent">
-                                    <h5 th:text="${favorite.post.title}"
-                                        class="card-title truncate font-weight-bold"></h5>
-                                    <div class="row align-items-baseline">
-                                        <div class="col-6">
-                                            <p th:text="${favorite.post.author.username}"></p>
-                                        </div>
-                                        <div class="col-3">
-                                            <div class="rounded-pill border text-center" style="width: 75px">
-                                                <i class="far fa-heart"></i> <span
-                                                    th:text="${favorite.post.favoritedBy.size()}"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--      FOLLOWERS TAB-->
-                <div class="tab-pane" id="followersTab">
-                    <div class="row align-items-center justify-content-around p-3">
-                        <div th:each="follower : ${user.followers}" class="my-2 mx-2 text-center">
-                            <p th:text="${follower.user.username}"></p>
-                        </div>
-                    </div>
-                </div>
-                <!--      FOLLOWING TAB-->
-                <div class="tab-pane" id="followingTab">
-                    <div class="row align-items-center justify-content-around p-3">
-                        <div class="col-md-12">
-                        </div>
-                        <div th:each="following : ${user.followings}" class="my-2  mx-2 text-center">
-                            <p th:text="${following.friend.username}"></p>
-                        </div>
-                    </div>
-                </div>
+        <div class="tab-pane fade" id="v-pills-favorites" role="tabpanel" aria-labelledby="v-pills-favorites-tab">
+            <!--            FAVORITE LISTS GO HERE-->
+            <h5 th:text="${user.username} + ' favorites'">My Favorites</h5>
+            <div th:each="favorite : ${user.favorites}">
+                <td th:text="${favorite.post.title}"></td>
+                <td th:text="${favorite.post.author.username}"></td>
+                <td th:text="${favorite.post.createdAt}"></td>
+                <td th:text="${favorite.post.updatedAt}"></td>
             </div>
         </div>
     </div>
-</main>
+</div>
+<!--<main class="mb-5">-->
+<!--    &lt;!&ndash;Main Container&ndash;&gt;-->
+<!--    &lt;!&ndash; USER INFO &ndash;&gt;-->
+<!--    <div class="container mt-4 pt-5">-->
+<!--        <div class="row px-2 pt-md-5">-->
+<!--            <div class="col-8 col-sm-9 mb-4">-->
+<!--                <div class="mb-2">-->
+<!--                    <h2 id="profileName" class="mb-0 text-black" th:text="${user.username}"></h2>-->
+<!--                </div>-->
+<!--                &lt;!&ndash; IF CUSTOMER IS HAS ABOUT ME ELSE &ndash;&gt;-->
+<!--                <p class="text-white">-->
+<!--                    <em>-->
+<!--                        <small th:text="${user.getAboutMe()} ?: 'Introduce yourself to the community by writing a little about yourself.'"></small>-->
+<!--                    </em>-->
+<!--                </p>-->
 
+<!--                <div>-->
+<!--                    &lt;!&ndash; EDIT PROFILE LINK &ndash;&gt;-->
+<!--                    <a th:href="@{/user/{id}/edit(id=${user.id})}" sec:authorize="isAuthenticated()" th:if="${isAuthor}"-->
+<!--                       type="button" class="btn yellow-text edit-btn rounded-pill shadow font-weight-bold">Edit-->
+<!--                        Profile</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; END USER INFO &ndash;&gt;-->
 
-<!--! MODALS-->
+<!--        &lt;!&ndash;      DASHBOARD TABS&ndash;&gt;-->
+<!--        <div class="container">-->
+<!--            <ul class="nav nav-tabs row align-items-center justify-content-center">-->
+<!--                &lt;!&ndash;        recipes&ndash;&gt;-->
+<!--                <li class="nav-item col-4 col-md-2 px-0" id="userLists" title="Recipes">-->
+<!--                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#userListsTab" data-toggle="tab">-->
+<!--                        <p class="text-white mb-0 small">recipes</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                &lt;!&ndash;        favorites&ndash;&gt;-->
+<!--                <li class="nav-item col-4 col-md-2 px-0" id="userFavorites">-->
+<!--                    <a class="nav-link dashtab nav-tab-shadow text-center" href="#userFavoritesTab" data-toggle="tab">-->
+<!--                        <p class="text-white mb-0 small">favorites</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        &lt;!&ndash;      !DASHBOARD TABS&ndash;&gt;-->
+<!--    </div>-->
+<!--    <div class="d-flex justify-content-center align-items-center ">-->
+<!--        <div class="container bg-light tab-card rounded-card shadow-lg mb-5">-->
+<!--            <div class="tab-content  ">-->
+<!--                &lt;!&ndash;      POSTS TAB&ndash;&gt;-->
+<!--                <div class="tab-pane" id="#userListsTab">-->
+<!--                    <div class="row justify-content-center py-5">-->
+<!--                        <div th:each="favorite : ${user.favorites}" class="align-items-center justify-content-around">-->
+<!--                            <div class="h-100 px-2 my-2 border-none bg-transparent recipe-card" style="width: 18rem;">-->
+<!--                                <div class="card-body bg-transparent">-->
+<!--                                    <h5 th:text="${favorite.post.title}"-->
+<!--                                        class="card-title truncate font-weight-bold"></h5>-->
+<!--                                    <div class="row align-items-baseline">-->
+<!--                                        <div class="col-6">-->
+<!--                                            <p th:text="${favorite.post.author.username}"></p>-->
+<!--                                        </div>-->
+<!--                                        <div class="col-3">-->
+<!--                                            <div class="rounded-pill border text-center" style="width: 75px">-->
+<!--                                                <i class="far fa-heart"></i> <span-->
+<!--                                                    th:text="${favorite.post.favoritedBy.size()}"></span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;      FAVORITES TAB&ndash;&gt;-->
+<!--                <div class="tab-pane" id="#userFavoritesTab">-->
+<!--                    <div class="row justify-content-center py-5">-->
+<!--                        <div th:each="favorite : ${user.favorites}" class="align-items-center justify-content-around">-->
+<!--                            <div class="h-100 px-2 my-2 border-none bg-transparent recipe-card" style="width: 18rem;">-->
+<!--                                <div class="card-body bg-transparent">-->
+<!--                                    <h5 th:text="${favorite.post.title}"-->
+<!--                                        class="card-title truncate font-weight-bold"></h5>-->
+<!--                                    <div class="row align-items-baseline">-->
+<!--                                        <div class="col-6">-->
+<!--                                            <p th:text="${favorite.post.author.username}"></p>-->
+<!--                                        </div>-->
+<!--                                        <div class="col-3">-->
+<!--                                            <div class="rounded-pill border text-center" style="width: 75px">-->
+<!--                                                <i class="far fa-heart"></i> <span-->
+<!--                                                    th:text="${favorite.post.favoritedBy.size()}"></span>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
 
 <!--MODALS-->
 <div th:replace="partials/modals"></div>
