--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -6,7 +6,7 @@
     <nav th:replace="partials/navbar.html :: nav"></nav>
 </header>
 <main class="pt-5 ">
-    <div class="container bg-light tab-card rounded-card shadow-lg mt-4 p-3 green-text font-weight-bold">
+    <div class="container bg-light tab-card mt-4 p-3">
         <form th:action="@{/post/new}" th:method="post" th:object="${post}">
 
             <!--    ENTER POST TITLE   -->
@@ -28,7 +28,7 @@
 
             <div class="form-group d-flex justify-content-center align-items-center">
                 <button sec:authorize="isAuthenticated()" th:if="${post.id == 0}"
-                        class="btn text-center nav-link shadow px-2" type="submit">
+                        class="btn text-center nav-link px-2" type="submit">
                     Submit
                 </button>
             </div>
