--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -4,6 +4,26 @@
 <body>
 <nav th:replace="partials/navbar :: nav"></nav>
 <h1>Show Post</h1>
+<p th:text="${post.title}"></p>
+<p th:text="${post.body}"></p>
+<p th:text="${post.author.username}"></p>
+<p th:text="${post.createdAt}"></p>
+<p th:text="${post.updatedAt}"></p>
+<p th:text="${post.title}"></p>
+<div id="comments">
+    <h4>Comments</h4>
+    <ul class="collection">
+        <li th:each="comment : ${post.comments}" class="collection-item avatar">
+            <span class="title" th:text="${comment.user.username.toUpperCase() + ' at ' + #dates
+                        .format(comment.createdAt)}"></span>
+            <p th:text="${comment.body}"></p>
+            <div class="child-comment" th:if="comment.children != null" th:each="child : ${comment.children}">
+                <span class="title" th:text="${child.user.username.toUpperCase()}"></span>
+                <blockquote th:text="${child.body}"></blockquote>
+            </div>
+        </li>
+    </ul>
+</div>
 
 
 
