--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -45,10 +45,15 @@
             <!--            USER LISTS GO HERE-->
             <h5 th:text="${user.username} + ' lists'">My Lists</h5>
             <div th:each="post : ${user.posts}">
-                <td th:text="${post.title}"></td>
-                <td th:text="${post.author.username}"></td>
-                <td th:text="${post.createdAt}"></td>
-                <td th:text="${post.updatedAt}"></td>
+                <div class="card m-4" style="width: 80%; margin:0 auto;">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${post.title}"></h5>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="${post.author.username}"></h6>
+                        <p class="pre-post-body card-text" th:text="${post.body}"></p>
+                        <a th:href="@{/post/{id}(id=${ post.id })}" data-bs-toggle="modal" class="card-link">View
+                            more</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="v-pills-favorites" role="tabpanel" aria-labelledby="v-pills-favorites-tab">
